# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1188 2010-03-24 11:15:25 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2010/03/22) Fixed bug#5161 - Envelope-To Header gets ignored for email
    dispatching.
 - (2010/03/18) Fixed bug#5060 - Get email notification for tickets created by
    myself (new feature).
 - (2010/03/18) Updated CPAN module Text::CSV to version 1.17.
 - (2010/03/18) Updated CPAN module MailTools to version 2.06.
 - (2010/03/18) Updated CPAN module CGI to version 3.49.
 - (2010/03/18) Updated CPAN module Net::IMAP::Simple to version 1.1911.
 - (2010/03/11) Upgraded CKEditor from version 3.1 to version 3.2.
 - (2010/03/09) Fixed bug#4996 - Rich Text Editor does not display in the Customer
    Frontend in IE8.
 - (2010/03/08) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs.
 - (2010/03/08) Fixed bug#5097 - AdminNotificationEvent does not display values
    on Change.
 - (2010/02/26) Fixed bug#4874 - LDAP connection even if it is not needed.
    Moved to "Die => 0" as default value if no connection to customer ldap
    source was possible.
 - (2010/02/23) Fixed bug#4957 - Password Change dialog misses "Current Password"
    option.
 - (2010/02/22) Fixed bug#5020 - Framework version for stats export is outdated.
 - (2010/02/21) Extended QueryCondition() of Kernel::System::DB to allow
    also "some praise" expression as "some&&praise", to be compat. just add
    "Extended => 1" to QueryCondition(). Short summary:
        some praise   -> search for "some" and "praise" in a text (order of words
                         is not importand)
        "some praise" -> search for "some praise" in a text as one string