@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1188 2010-03-24 11:15:25 martin Exp $
+# $Id: CHANGES,v 1.1189 2010-03-24 22:50:41 mp Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 2.5.0 beta1 (????/??/??)
+ - (2010/03/24) Fixed bug#5130 - Incorrect check for 'NoOutOfOffice' in GetUserData()
  - (2010/03/22) Fixed bug#5161 - Envelope-To Header gets ignored for email
     dispatching.
  - (2010/03/18) Fixed bug#5060 - Get email notification for tickets created by
